fixing scrollbar adding sass vars

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 body {
   font-family: 'Maven Pro', sans-serif;
-  padding: 20px 5px;
-  
 }
 
 a {
@@ -23,6 +21,25 @@ html {
   font-size: 62.5%; 
   overflow: scroll;
   overflow-x: hidden;
-  
-  
+}
+
+html::-webkit-scrollbar {
+  width: 2px;
+}
+
+html::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 20px rgba(0,0,0,0.3); 
+  box-shadow: inset 0 0 20px rgba(0,0,0,0.3); 
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 50px $scroll-color; 
+  box-shadow: inset 0 0 50px $scroll-color; 
+}
+
+html::-webkit-scrollbar-thumb:hover {
+ -webkit-box-shadow: inset 0 0 50px $scroll-color;
+ box-shadow: inset 0 0 50px $scroll-color;
 }
