--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .custom-button {
   display: block;
   line-height: 0;
@@ -6,7 +8,7 @@
   margin: 1rem 0rem;
   padding: 1rem 1rem;
   font-size: 1.3em;
-  background-color: #9f8f7b;
+  background-color: $brand-color;
   color: white;
   text-transform: capitalize;
   font-family: 'Open Sans';
@@ -18,6 +20,6 @@
 
   &:hover {
     background-color: white;
-    color: black;
+    color: $brand-color;
   }
 }
