--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .menu-item {
   min-width: 45%;
   height: 24em;
@@ -27,13 +29,13 @@
     .title {
       font-weight: 500;
       font-size: 1.6em;
-      color: #4a4a4a;
+      color: $gray-color;
     }
 
     .subtitle {
       font-weight: 300;
       font-size: 1.3em;
-      color: #4a4a4a;
+      color: $gray-color;
     }
   }
 }
