--- a/src/components/metric-item/metric-item.styles.scss
+++ b/src/components/metric-item/metric-item.styles.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .metric-item {
   display: flex;
   flex-direction: column;
@@ -5,7 +7,7 @@
   justify-content: space-evenly;
 
   &.green {
-    background-color: #47E4B1;
+    background-color: $green;
     padding: 1rem 2rem;
     border-radius: 3px;
     h1, h2 {
@@ -15,7 +17,7 @@
   }
 
   &.red {
-    background-color: #F1373B;
+    background-color: $red;
     padding: 1rem 2rem;
     border-radius: 3px;
     h1, h2 {
@@ -25,7 +27,7 @@
   }
 
   &.purple {
-    background-color: #9C528B;
+    background-color: $purple;
     padding: 1rem 2rem;
     border-radius: 3px;
     h1, h2 {
@@ -35,13 +37,13 @@
   }
 
   h1 {
-    color: #45464C;
+    color: $gray-color;
     font-family: 'Open Sans';
     margin-bottom: .5rem;
   }
 
   h2 {
-    color: darkgray;
+    color: $gray-color;
     font-weight: lighter;
     font-size: 1.25em;
   }
